refinator/static/refinator/css/style.css
/* Sticky footer styles
-------------------------------------------------- */
html {
    position: relative;
    min-height: 100%;
}
body {
    /* Margin bottom by footer height */
    margin-bottom: 55px;
}
.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    /* Set the fixed height of the footer here */
    height: 55px;
    line-height: 55px; /* Vertically center the text there */
    background-color: #f5f5f5;
    font-size: 80%;
}

.navbar {
    background-color: #f5f5f5;
}

.table-borderless tbody tr td, .table-borderless tbody tr th, .table-borderless thead tr th {
    border: none;
}

th.vertical-center {
    vertical-align: middle;
}

th.padded-lg {
    box-sizing: border-box;
    padding: 1.5rem 1rem;
    width: 10%;
}

.nonclickable {
    pointer-events: none;
}

